:art: Improve SEO

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="th">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="description" content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue">
+	<meta property="og:title" content="Vue Thailand Address">
+	<meta property="og:description" content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue">
+	<meta property="og:type" content="website">
+	<meta property="og:locale" content="th_TH">
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 	<title>Vue Thailand Address</title>
 </head>
