:chart_with_upwards_trend: Add Google verification

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<meta property="og:description" content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue">
 	<meta property="og:type" content="website">
 	<meta property="og:locale" content="th_TH">
+	<meta name="google-site-verification" content="D1AWOITrlWUqwBpNVuz7uqQKzKEvXjZOl6_A9maWKUk">
 	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
 	<title>Vue Thailand Address</title>
 </head>
