:speech_balloon: Update CDN links

--- a/src/snippets/GetStarted/browser.html
+++ b/src/snippets/GetStarted/browser.html
@@ -10,10 +10,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
 	<!-- CSS (optional) -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-thailand-address@3.0.0-rc.3/dist/vue-thailand-address.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-thailand-address@3/dist/vue-thailand-address.min.css">
 
 	<!-- JavaScript -->
-	<script src="https://cdn.jsdelivr.net/combine/npm/vue-thailand-address@3.0.0-rc.3/dist/db.web.min.js,npm/vue-thailand-address@3.0.0-rc.3"></script>
+	<script src="https://cdn.jsdelivr.net/combine/npm/vue-thailand-address@3/dist/db.web.min.js,npm/vue-thailand-address@3"></script>
 </head>
 <body>
 	<div id="app">
