--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="th">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<meta name="description" content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue">
-	<meta property="og:title" content="Vue Thailand Address">
-	<meta property="og:description" content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue">
-	<meta property="og:type" content="website">
-	<meta property="og:locale" content="th_TH">
-	<meta name="google-site-verification" content="D1AWOITrlWUqwBpNVuz7uqQKzKEvXjZOl6_A9maWKUk">
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-	<title>Vue Thailand Address</title>
-</head>
-<body>
-	<noscript>
-		<strong>We're sorry but Vue Thailand Address doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-	</noscript>
-	<div id="app"></div>
-	<!-- built files will be auto injected -->
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+		<meta
+			name="description"
+			content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue"
+		/>
+		<meta property="og:title" content="Vue Thailand Address" />
+		<meta
+			property="og:description"
+			content="ตัวช่วยกรอกที่อยู่ของไทย สำหรับ Vue"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="th_TH" />
+		<meta
+			name="google-site-verification"
+			content="D1AWOITrlWUqwBpNVuz7uqQKzKEvXjZOl6_A9maWKUk"
+		/>
+		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+		<title>Vue Thailand Address</title>
+	</head>
+	<body>
+		<noscript>
+			<strong>
+				We're sorry but Vue Thailand Address doesn't work properly
+				without JavaScript enabled. Please enable it to continue.
+			</strong>
+		</noscript>
+		<div id="app"></div>
+		<!-- built files will be auto injected -->
+	</body>
 </html>
